syntax = "proto3";

package ru.yandex.alice.memento.proto;

option go_package = "a.yandex-team.ru/alice/memento/proto;memento";
option java_package = "ru.yandex.alice.memento.proto";
option java_outer_classname = "DeviceConfigsProto";

import "alice/protos/data/scenario/centaur/my_screen/widgets.proto";
import "alice/protos/data/scenario/centaur/teasers/teaser_settings.proto";
import "alice/protos/data/scenario/voiceprint/personalization_data.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TDummyDeviceConfig {
    uint32 SomeField = 1;
}

message TCentaurWidgetsDeviceConfig {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    
    message TColumn {
        repeated NAlice.NData.TCentaurWidgetData Widgets = 1 [json_name = "widgets", (NYT.column_name) = "widgets", deprecated = true];
        repeated NAlice.NData.TCentaurWidgetConfigData WidgetConfigs = 2 [json_name = "widget_configs", (NYT.column_name) = "widget_configs"];
    }
    repeated TColumn Columns = 1 [json_name = "columns", (NYT.column_name) = "columns"];
}

message TCentaurTeasersDeviceConfig {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
 
    repeated NAlice.NData.TCentaurTeaserConfigData TeaserConfigs = 1 [json_name = "teaser_configs", (NYT.column_name) = "teaser_configs"];
}

message TPersonalizationDataDeviceConfig {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string PersId = 1 [json_name = "pers_id", (NYT.column_name) = "pers_id"];
    string UserName = 2 [json_name = "user_name", (NYT.column_name) = "user_name"];
    NAlice.NData.NVoiceprint.EGender Gender = 3 [json_name = "gender", (NYT.column_name) = "gender"];
}
